// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-dropdown should be displayed with minimum props 1`] = `
<div
  className="wrapper "
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  role="button"
>
  <div
    onClick={[Function]}
    role="button"
  >
    <Button
      disabled={false}
      horizontal={false}
      onClick={[Function]}
      pressed={false}
      size="s"
      type="normal"
    >
      Button
      <Arrow
        className=""
        orientation="down"
      />
    </Button>
  </div>
</div>
`;

exports[`fyndiq-component-dropdown should be opened when clicked on the button 1`] = `
<div
  className="
              dropdownWrapper
              dropdownDefault
              position-bl
            "
  style={
    Object {
      "left": 0,
      "top": 5,
    }
  }
>
  Value
</div>
`;

exports[`fyndiq-component-dropdown should be opened when hovered, if in hoverMode 1`] = `
<div
  className="
              dropdownWrapper
              dropdownDefault
              position-bl
            "
  style={
    Object {
      "left": 0,
      "top": 5,
    }
  }
>
  Value
</div>
`;

exports[`fyndiq-component-dropdown should have a custom button 1`] = `
<div
  className="wrapper "
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  role="button"
>
  <div
    onClick={[Function]}
    role="button"
  >
    <div>
      Hello
    </div>
  </div>
</div>
`;

exports[`fyndiq-component-dropdown should have a custom wrapper 1`] = `
<div
  className="
              dropdownWrapper
              
              position-bl
            "
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
>
  Content
</div>
`;

exports[`fyndiq-component-dropdown should have an arrow oriented to the top if dropdown is above 1`] = `
<Arrow
  className=""
  orientation="up"
/>
`;

exports[`fyndiq-component-dropdown should have different dropdown positions 1`] = `
<div
  className="
              dropdownWrapper
              dropdownDefault
              position-bc
            "
  style={
    Object {
      "left": 0,
      "top": 5,
    }
  }
>
  Content
</div>
`;

exports[`fyndiq-component-dropdown should have different dropdown positions 2`] = `
<div
  className="
              dropdownWrapper
              dropdownDefault
              position-tr
            "
  style={
    Object {
      "left": 0,
      "top": -5,
    }
  }
>
  Content
</div>
`;

exports[`fyndiq-component-dropdown should have different dropdown positions 3`] = `
<div
  className="
              dropdownWrapper
              dropdownDefault
              position-tc
            "
  style={
    Object {
      "left": 0,
      "top": -5,
    }
  }
>
  Content
</div>
`;

exports[`fyndiq-component-dropdown should open the dropdown on button click in hoverMode 1`] = `
<div
  className="
              dropdownWrapper
              dropdownDefault
              position-bl
            "
  style={
    Object {
      "left": 0,
      "top": 5,
    }
  }
>
  Value
</div>
`;

exports[`fyndiq-component-dropdown should remove eventListeners when unmounted 1`] = `
Object {
  "mouseout": [Function],
  "mouseover": [Function],
}
`;
